<resources>
    <string name="app_name">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">My Profile</string>
    <string name="tab_text_3">Goals For Today</string>
    <string name="tab_text_4">Workout Plan</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_birth_date">Date Of Birth</string>
    <string name="prompt_weight">Weight</string>
    <string name="prompt_height">Height</string>
    <string name="change_details">Change Details</string>
</resources>